<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-License-Identifier: Apache-2.0
    SPDX-FileCopyrightText: 2024 The halogenOS Project
-->
<resources>
    <string name="app_name">Wallpapers</string>

    <string name="rom_wallpapers">halogenOS Wallpapers</string>

    <string name="wallpaper_blue_silk">Blue Silk</string>
    <string name="wallpaper_purple_edges">Purple Edges</string>
    <string name="wallpaper_xos14">halogenOS 14</string>
    <string name="wallpaper_xos13">halogenOS 13</string>
    <string name="wallpaper_xos13_subtitle">Originally from the Potato Open Sauce Project</string>
    <string name="wallpaper_xos13_subtitle2">Hue-shifted by 24%</string>
    <string name="wallpaper_xos12_1">halogenOS 12.1</string>
    <string name="wallpaper_xos12_1_subtitle">Originally from the Potato Open Sauce Project</string>
    <string name="wallpaper_xos12_1_subtitle2">Hue-shifted by 32%</string>
    <string name="wallpaper_xos12_0">halogenOS 12.0</string>
    <string name="wallpaper_xos12_0_subtitle">Originally from the Potato Open Sauce Project</string>
    <string name="wallpaper_xos6_to_8_1">halogenOS 6.0</string>
    <string name="wallpaper_xos6_to_8_1_subtitle">The original, where it all started</string>
    <string name="wallpaper_xos6_to_8_1_subtitle2">Used up to halogenOS 8.1</string>
    <string name="wallpaper_sky_full_of_stars">Sky full of stars</string>
    <string name="wallpaper_nightsky_aurora">Nightsky Aurora</string>
    <string name="wallpaper_radial_glow">Radial Glow</string>
</resources>