<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-License-Identifier: Apache-2.0
    SPDX-FileCopyrightText: 2024 The halogenOS Project
-->
<!-- See WallpaperPicker2 src/com/android/wallpaper/module/DefaultCategoryProvider.java#L309 for logic -->
<wallpapers>
    <category
        id="custom_wallpapers"
        title="@string/rom_wallpapers"
        priority="2"
        featured="blue_silk">

        <static-wallpaper
            id="blue_silk"
            src="@drawable/blue_silk"
            title="@string/wallpaper_blue_silk" />

        <static-wallpaper
            id="purple_edges"
            src="@drawable/purple_edges"
            title="@string/wallpaper_purple_edges" />

        <static-wallpaper
            id="xos14"
            src="@drawable/xos14"
            title="@string/wallpaper_xos14" />

        <static-wallpaper
            id="xos13"
            src="@drawable/xos13"
            title="@string/wallpaper_xos13"
            subtitle1="@string/wallpaper_xos13_subtitle"
            subtitle2="@string/wallpaper_xos13_subtitle2" />

        <static-wallpaper
            id="xos12_1"
            src="@drawable/xos12_1"
            title="@string/wallpaper_xos12_1"
            subtitle1="@string/wallpaper_xos12_1_subtitle"
            subtitle2="@string/wallpaper_xos12_1_subtitle2" />

        <static-wallpaper
            id="xos12_0"
            src="@drawable/xos12_0"
            title="@string/wallpaper_xos12_0"
            subtitle1="@string/wallpaper_xos12_0_subtitle" />

        <static-wallpaper
            id="xos6_to_8_1"
            src="@drawable/xos6_to_8_1"
            title="@string/wallpaper_xos6_to_8_1"
            subtitle1="@string/wallpaper_xos6_to_8_1_subtitle"
            subtitle2="@string/wallpaper_xos6_to_8_1_subtitle2" />

        <static-wallpaper
            id="sky_full_of_stars"
            src="@drawable/sky_full_of_stars"
            title="@string/wallpaper_sky_full_of_stars" />

        <static-wallpaper
            id="nightsky_aurora"
            src="@drawable/nightsky_aurora"
            title="@string/wallpaper_nightsky_aurora" />

        <static-wallpaper
            id="radial_glow"
            src="@drawable/radial_glow"
            title="@string/wallpaper_radial_glow" />

    </category>
</wallpapers>